assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error ';'
    5           | error ';'

    6 class: CLASS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    8 feature_list: ε
    9             | feature_list feature ';'
   10             | feature_list error ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expr

   14 formal_list: ε
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expr_list: ε
   19          | expr
   20          | expr_list ',' expr

   21 expr_list_no_empty: expr ';'
   22                   | expr_list_no_empty expr ';'
   23                   | expr_list_no_empty error ';'
   24                   | error ';'

   25 expr: OBJECTID ASSIGN expr
   26     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr '.' OBJECTID '(' expr_list ')'
   28     | OBJECTID '(' expr_list ')'
   29     | OBJECTID
   30     | IF expr THEN expr ELSE expr FI
   31     | WHILE expr LOOP expr POOL
   32     | '{' expr_list_no_empty '}'
   33     | LET let_list
   34     | CASE expr OF case_list ESAC
   35     | NEW TYPEID
   36     | ISVOID expr
   37     | expr '+' expr
   38     | expr '-' expr
   39     | expr '*' expr
   40     | expr '/' expr
   41     | '~' expr
   42     | expr '<' expr
   43     | expr LE expr
   44     | expr '=' expr
   45     | NOT expr
   46     | '(' expr ')'
   47     | INT_CONST
   48     | STR_CONST
   49     | BOOL_CONST

   50 let_list: OBJECTID ':' TYPEID IN expr
   51         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   52         | OBJECTID ':' TYPEID ',' let_list
   53         | OBJECTID ':' TYPEID ASSIGN expr ',' let_list
   54         | error let_list
   55         | error

   56 case: OBJECTID ':' TYPEID DARROW expr ';'

   57 case_list: case
   58          | case_list case


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 26 27 28 46
    ')' (41) 11 26 27 28 46
    '*' (42) 39
    '+' (43) 37
    ',' (44) 16 20 52 53
    '-' (45) 38
    '.' (46) 26 27
    '/' (47) 40
    ':' (58) 11 12 13 17 50 51 52 53 56
    ';' (59) 4 5 6 7 9 10 21 22 23 24 56
    '<' (60) 42
    '=' (61) 44
    '@' (64) 26
    '{' (123) 6 7 11 32
    '}' (125) 6 7 11 32
    '~' (126) 41
    error (256) 4 5 10 23 24 54 55
    CLASS (258) 6 7
    ELSE (259) 30
    FI (260) 30
    IF (261) 30
    IN (262) 50 51
    INHERITS (263) 7
    LET (264) 33
    LOOP (265) 31
    POOL (266) 31
    THEN (267) 30
    WHILE (268) 31
    CASE (269) 34
    ESAC (270) 34
    OF (271) 34
    DARROW (272) 56
    NEW (273) 35
    ISVOID (274) 36
    STR_CONST <symbol> (275) 48
    INT_CONST <symbol> (276) 47
    BOOL_CONST <boolean> (277) 49
    TYPEID <symbol> (278) 6 7 11 12 13 17 26 35 50 51 52 53 56
    OBJECTID <symbol> (279) 11 12 13 17 25 26 27 28 29 50 51 52 53 56
    ASSIGN (280) 13 25 51 53
    NOT (281) 45
    LE (282) 43
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4 5
        on right: 1 3 4
    class <class_> (48)
        on left: 6 7
        on right: 2 3
    feature_list <features> (49)
        on left: 8 9 10
        on right: 6 7 9 10
    feature <feature> (50)
        on left: 11 12 13
        on right: 9
    formal_list <formals> (51)
        on left: 14 15 16
        on right: 11 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    expr_list <expressions> (53)
        on left: 18 19 20
        on right: 20 26 27 28
    expr_list_no_empty <expressions> (54)
        on left: 21 22 23 24
        on right: 22 23 32
    expr <expression> (55)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 11 13 19 20 21 22 25 26 27 30 31 34 36 37 38 39 40 41 42 43 44 45 46 50 51 53 56
    let_list <expression> (56)
        on left: 50 51 52 53 54 55
        on right: 33 52 53 54
    case <case_> (57)
        on left: 56
        on right: 57 58
    case_list <cases> (58)
        on left: 57 58
        on right: 34 58


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    5 class_list: error • ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS • TYPEID '{' feature_list '}' ';'
    7      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    3 class_list: class_list • class
    4           | class_list • error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    5 class_list: error ';' •

    $default  reduce using rule 5 (class_list)


State 7

    6 class: CLASS TYPEID • '{' feature_list '}' ';'
    7      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end •

    $default  accept


State 9

    4 class_list: class_list error • ';'

    ';'  shift, and go to state 13


State 10

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 11

    7 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 15


State 13

    4 class_list: class_list error ';' •

    $default  reduce using rule 4 (class_list)


State 14

    7 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 15

    6 class: CLASS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature ';'
   10             | feature_list • error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


State 16

    7 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 21


State 17

   10 feature_list: feature_list error • ';'

    ';'  shift, and go to state 22


State 18

   11 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID • ':' TYPEID
   13        | OBJECTID • ':' TYPEID ASSIGN expr

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


State 19

    6 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 25


State 20

    9 feature_list: feature_list feature • ';'

    ';'  shift, and go to state 26


State 21

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature ';'
   10             | feature_list • error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 27

    feature  go to state 20


State 22

   10 feature_list: feature_list error ';' •

    $default  reduce using rule 10 (feature_list)


State 23

   11 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


State 24

   12 feature: OBJECTID ':' • TYPEID
   13        | OBJECTID ':' • TYPEID ASSIGN expr

    TYPEID  shift, and go to state 31


State 25

    6 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 26

    9 feature_list: feature_list feature ';' •

    $default  reduce using rule 9 (feature_list)


State 27

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 32


State 28

   17 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 33


State 29

   11 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}'
   16 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 30

   15 formal_list: formal •

    $default  reduce using rule 15 (formal_list)


State 31

   12 feature: OBJECTID ':' TYPEID •
   13        | OBJECTID ':' TYPEID • ASSIGN expr

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 12 (feature)


State 32

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 7 (class)


State 33

   17 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 37


State 34

   11 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 38


State 35

   16 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 28

    formal  go to state 39


State 36

   13 feature: OBJECTID ':' TYPEID ASSIGN • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 54


State 37

   17 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 17 (formal)


State 38

   11 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 55


State 39

   16 formal_list: formal_list ',' formal •

    $default  reduce using rule 16 (formal_list)


State 40

   30 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 56


State 41

   33 expr: LET • let_list

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    let_list  go to state 59


State 42

   31 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 60


State 43

   34 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 61


State 44

   35 expr: NEW • TYPEID

    TYPEID  shift, and go to state 62


State 45

   36 expr: ISVOID • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 63


State 46

   48 expr: STR_CONST •

    $default  reduce using rule 48 (expr)


State 47

   47 expr: INT_CONST •

    $default  reduce using rule 47 (expr)


State 48

   49 expr: BOOL_CONST •

    $default  reduce using rule 49 (expr)


State 49

   25 expr: OBJECTID • ASSIGN expr
   28     | OBJECTID • '(' expr_list ')'
   29     | OBJECTID •

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 29 (expr)


State 50

   45 expr: NOT • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 66


State 51

   41 expr: '~' • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 67


State 52

   32 expr: '{' • expr_list_no_empty '}'

    error       shift, and go to state 68
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr_list_no_empty  go to state 69
    expr                go to state 70


State 53

   46 expr: '(' • expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 71


State 54

   13 feature: OBJECTID ':' TYPEID ASSIGN expr •
   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 13 (feature)


State 55

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 81


State 56

   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   30     | IF expr • THEN expr ELSE expr FI
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 57

   54 let_list: error • let_list
   55         | error •

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    ELSE  reduce using rule 55 (let_list)
    FI    reduce using rule 55 (let_list)
    IN    reduce using rule 55 (let_list)
    LOOP  reduce using rule 55 (let_list)
    POOL  reduce using rule 55 (let_list)
    THEN  reduce using rule 55 (let_list)
    OF    reduce using rule 55 (let_list)
    LE    reduce using rule 55 (let_list)
    '<'   reduce using rule 55 (let_list)
    '='   reduce using rule 55 (let_list)
    '+'   reduce using rule 55 (let_list)
    '-'   reduce using rule 55 (let_list)
    '*'   reduce using rule 55 (let_list)
    '/'   reduce using rule 55 (let_list)
    '@'   reduce using rule 55 (let_list)
    '.'   reduce using rule 55 (let_list)
    ';'   reduce using rule 55 (let_list)
    '}'   reduce using rule 55 (let_list)
    ')'   reduce using rule 55 (let_list)
    ','   reduce using rule 55 (let_list)

    let_list  go to state 83


State 58

   50 let_list: OBJECTID • ':' TYPEID IN expr
   51         | OBJECTID • ':' TYPEID ASSIGN expr IN expr
   52         | OBJECTID • ':' TYPEID ',' let_list
   53         | OBJECTID • ':' TYPEID ASSIGN expr ',' let_list

    ':'  shift, and go to state 84


State 59

   33 expr: LET let_list •

    $default  reduce using rule 33 (expr)


State 60

   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   31     | WHILE expr • LOOP expr POOL
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr

    LOOP  shift, and go to state 85
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 61

   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   34     | CASE expr • OF case_list ESAC
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr

    OF   shift, and go to state 86
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 62

   35 expr: NEW TYPEID •

    $default  reduce using rule 35 (expr)


State 63

   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   36     | ISVOID expr •
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 36 (expr)


State 64

   25 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 87


State 65

   28 expr: OBJECTID '(' • expr_list ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    $default  reduce using rule 18 (expr_list)

    expr_list  go to state 88
    expr       go to state 89


State 66

   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr
   45     | NOT expr •

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 45 (expr)


State 67

   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   41     | '~' expr •
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 41 (expr)


State 68

   24 expr_list_no_empty: error • ';'

    ';'  shift, and go to state 90


State 69

   22 expr_list_no_empty: expr_list_no_empty • expr ';'
   23                   | expr_list_no_empty • error ';'
   32 expr: '{' expr_list_no_empty • '}'

    error       shift, and go to state 91
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '}'         shift, and go to state 92
    '('         shift, and go to state 53

    expr  go to state 93


State 70

   21 expr_list_no_empty: expr • ';'
   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 94


State 71

   26 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | expr • '.' OBJECTID '(' expr_list ')'
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • LE expr
   44     | expr • '=' expr
   46     | '(' expr • ')'

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ')'  shift, and go to state 95


State 72

   43 expr: expr LE • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 96


State 73

   42 expr: expr '<' • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 97


State 74

   44 expr: expr '=' • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 98


State 75

   37 expr: expr '+' • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 99


State 76

   38 expr: expr '-' • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 100


State 77

   39 expr: expr '*' • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 101


State 78

   40 expr: expr '/' • expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 102


State 79

   26 expr: expr '@' • TYPEID '.' OBJECTID '(' expr_list ')'

    TYPEID  shift, and go to state 103


State 80

   27 expr: expr '.' • OBJECTID '(' expr_list ')'

    OBJECTID  shift, and go to state 104


State 81

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' • expr '}'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 105


State 82

   30 expr: IF expr THEN • expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 106


State 83

   54 let_list: error let_list •

    $default  reduce using rule 54 (let_list)


State 84

   50 let_list: OBJECTID ':' • TYPEID IN expr
   51         | OBJECTID ':' • TYPEID ASSIGN expr IN expr
   52         | OBJECTID ':' • TYPEID ',' let_list
   53         | OBJECTID ':' • TYPEID ASSIGN expr ',' let_list

    TYPEID  shift, and go to state 107


State 85

   31 expr: WHILE expr LOOP • expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 108


State 86

   34 expr: CASE expr OF • case_list ESAC

    OBJECTID  shift, and go to state 109

    case       go to state 110
    case_list  go to state 111


State 87
